--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kimflix11.netlify.app/" />
+    <meta property="og:title" content="Kimflix" />
+    <meta
+      property="og:description"
+      content="전세계의 영화, TV 정보를 확인할 수 있는 웹사이트입니다."
+    />
+    <meta property="og:site_name" content="Kimflix" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta
+      name="description"
+      content="
+    전세계 영화 tv 정보를 확인 할 수 있습니다."
+    />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <title>Kimflix | 전세계 영화 TV 정보를 한 곳에</title>
+  </head>
 
-  <title>Kimflix</title>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
